--- a/src/main/resources/templates/web/story/main.html
+++ b/src/main/resources/templates/web/story/main.html
@@ -1,8 +1,5 @@
-<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{layout/defaultLayout}"
-      th:with="isSignIn=false"
-    >
+          layout:decorate="~{web/layout/defaultLayout}">
     <th:block layout:fragment="content">
         <div id="container">
             <section id="story" class="container-wrap">
